fixed text overflow in results

--- a/style.css
+++ b/style.css
@@ -73,3 +73,9 @@ button:hover {
 #equals {
     background-color: rgb(8, 87, 233);
 }
+
+#result {
+    width: 14ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
